--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,36 @@
   background-color: rgb(30, 29, 45);
   background-color: rgb(255, 255, 255);
 }
+
+
+
+.movies-list {
+  /* display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
+  padding-left: 5%; */
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 1rem;
+  padding: 5%;
+  align-content: center;
+  justify-content: space-around;
+  /* flex-wrap: nowrap; */
+}
+
+.movie-image {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 9px;
+}
+
+.movie-container {
+  width: 175px;
+  font-size: 12px;
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+
+}
