feat: add dependecy array to useEffect to stop endless API requests and re renders

--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,8 @@ body {
 .movies {
   padding: 4px;
   margin: 30px;
-  display: flex;
-  /* flex-wrap: inhegarit; */
+  /* display: flex;
+  flex-wrap: wrap; */
 }
 
 
