--- a/src/App.css
+++ b/src/App.css
@@ -33,13 +33,17 @@ body {
 */
 .movie-container {
   display: inline-block;
+  height: 250px;
+  width: 200px;
+  padding: 10px;
+  justify-content: center;
+  align-content: center;
+  
 
 } 
 
 .movie-image {
-  /* width: 100%; */
-  height: 250px;
-  width: 200px;
+  width: 100%;
   border-radius: 10px;
   margin-bottom: 9px;
 }
