--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ html,
 body {
   margin: 0px;
   background-color: #6E6E73;
+  background-color: #1e1e1e;
   height: 100vh;
   width: 100vw;
 }
@@ -116,23 +117,40 @@ body {
 .movie-text-container {
   font-family: 'Kanit', sans-serif;
   display: flex;
-  gap: 20px;
+  gap: 30px;
+  width: 90%;
+  justify-content: flex-end;
+  padding: 25px;
 }
 
 .movie-poster-small {
-  width: 20%;
+  width: 30%;
   border-radius: 5px;
+  border: 1px solid #ffffff;
+  border-radius: 15px;
+  background-color: #6E6E73;
 }
 
 .movie-info-left {
-  border: 1px solid #0000ff;
-  width: 100%;
+  border: 1px solid #ffffff;
+  border-radius: 15px;
+  background-color: #6E6E73;
+  width: 80%;
   padding-left: 30px;
-  font-weight: bold;
+  font-weight: 900;
+  color: white;
+
+}
+
+.movie-data {
+  font-weight: normal;
 }
 .movie-info-right {
-  border: 1px solid #0000ff;
-  width: 100%;
+  border: 1px solid #ffffff;
+  border-radius: 15px;
+  background-color: #6E6E73;
+  width: 80%;
   padding-left: 30px;
   font-weight: bold;
+  color: white
 }
