--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,25 @@ body {
 
 .back-button {
   position: absolute;
+  width: 8%;
+  height: 5%;
+  font-family: 'Kanit', sans-serif;
+  font-size: 1.2em;
+  font-weight: bold;
+  background-color: #6E6E73;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  margin-left: 15px;
+  margin-top: 15px;
+  transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  cursor: pointer;
+}
+
+.back-button:hover {
+    transform: translateY(3px);
+    background: rgba(255, 255, 255, 0.365);
+    color: black;
 }
 
 .movie-title {
