feat: add on hover effect to header title"

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,9 @@ body {
   justify-content: center;
   align-items: center;
   padding-top: 3%;
+  font-size: 5em;
+  color: red;
+  font-family: Combo;
 }
 
 .header-logo {
