--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import 'animate.css';
 /* * {
   box-sizing: border-box;
   background-color: rgb(30, 29, 45);
@@ -60,6 +61,10 @@ body {
   font-size: 5em;
   color: red;
   font-family: Combo;
+}
+
+.animate__animated.animate__bounceInLeft {
+  --animate-duration: 1s;
 }
 
 .header-logo {
