--- a/src/App.css
+++ b/src/App.css
@@ -175,3 +175,16 @@ body {
   color: white;
   box-shadow: 5px 5px 5px rgb(255, 255, 255);
 }
+
+.movie-trailer-container {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.trailer {
+  border: 1px solid #ffffff;
+  border-radius: 15px;
+  box-shadow: 5px 5px 5px rgb(255, 255, 255);
+}
