--- a/src/App.css
+++ b/src/App.css
@@ -188,3 +188,8 @@ body {
   border-radius: 15px;
   box-shadow: 5px 5px 5px rgb(255, 255, 255);
 }
+.login-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
